@@ -94,6 +94,7 @@ You can read our Terms of Service [here](https://en.wordpress.com/tos).
 * Fix - Save payment method checkbox for Subscriptions customer-initiated payment method updates.
 * Fix - Support checkout on Internet Explorer 11.
 * Fix - Webhook processing with no Jetpack plugin installed.
+* Fix - Do not block the checkout card field from loading when customer meta is invalid or related to an old account.
 * Fix - Saving account statement descriptor with an ampersand character.
 * Add - Display payment method details on account subscriptions pages.
 * Add - Redact sensitive data before logging.
