@@ -3,6 +3,7 @@
 = 1.x.x - 2020-xx-xx =
 * Fix - Save payment method checkbox for Subscriptions customer-initiated payment method updates.
 * Fix - Support checkout on Internet Explorer 11.
+* Fix - Do not block the checkout card field from loading when customer meta is invalid or related to an old account
 * Fix - Webhook processing with no Jetpack plugin installed.
 * Fix - Saving account statement descriptor with an ampersand character.
 * Add - Display payment method details on account subscriptions pages.
